--- a/src/components/title-job/title-job.style.css
+++ b/src/components/title-job/title-job.style.css
@@ -81,9 +81,21 @@
 	}
 }
 
+@media (max-width: 480px) {
+	.title-carousel {
+		width: 130px;
+	}
+
+	.title-fixed,
+	.title-part {
+		font-size: 1.25rem;
+	}
+}
+
+/* 
 @media (max-width: 768px) {
 	.title-container {
 		flex-direction: column;
 		gap: 0.5rem;
 	}
-}
+} */
