--- a/src/pages/home.style.css
+++ b/src/pages/home.style.css
@@ -47,6 +47,11 @@
 }
 
 @media (max-width: 480px) {
+	.container {
+		max-width: 100vw;
+		padding: 0.5rem;
+	}
+
 	.subtitle {
 		font-size: 1rem;
 	}
